--- a/app/views/doctors/edit.html.erb
+++ b/app/views/doctors/edit.html.erb
@@ -1,12 +1,9 @@
 <% provide(:title, 'Edit doctor') %>
 <% provide(:button_text, 'Save changes') %>
 
-<h1>Update doctor's profile</h1>
-
-<div class="row justify-content-md-center">
-  <div class="col-md-10 col-md-offset-1">
+<div class="col-sm-10 col-sm-offset-2">
+   <h3 class='display-1'>Update Doctor's profile</h3>
 
 <%= render 'form' %>
 
-  </div>
 </div>
