--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -3,15 +3,14 @@
 <table class="tbl table-hover"> 
   <thead>
       <tr>
-          <th>Name</th>
-          <th>Type</th>
-          <th>Service</th>
-          <th>Specialty</th>
+          <th class='tbl_lmd'>Name</th>
+          <th class='tbl_sm'>Type</th>
+          <th class='tbl_sm'>Spec.</th>
           <th>Provider#</th>
           <th>Group#</th>
-          <th>Bills?</th>
-	  <th> Address</th>
-          <th>City</th>
+          <th class='tbl_sm'>Bills?</th>
+	  <th class='tbl_lg'> Address</th>
+          <th class='tbl_md'>City</th>
           <th>Phone </th>
 	  <% if  current_user.admin?  %>
 	      <th> </th>
