--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -2,8 +2,8 @@
 <% provide(:button_text, 'Save') %>
 <h1>New Doctor </h1>
 
-<div class="row justify-content-sm-center">
-	<div class="col-sm-10 col-sm-offset-1">
+<div class="col-md-10 col-md-offset-2">
+   <h3 class='display-1'>New Doctor</h3>
 
 	<%= render 'form' %>
 
