current doctor tweaked; validation for unique visits/day added

--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -66,8 +66,10 @@
   </tbody>
 </table>
 
+<% if @daysheet.any? %>
 <div class="bottom_buttons ">
 <%= will_paginate @daysheet, class: "btn" %> 
 </div>
+<% end %>
 
 </div>
