--- a/app/views/layouts/_select_doctor.html.erb
+++ b/app/views/layouts/_select_doctor.html.erb
@@ -2,7 +2,7 @@
 <%= form_with url: set_doctor_path do |f| %>
   <div class="form-group">
     <div class="col-sm-12 col-md-12 padding-0">
-    <% doc_id = current_doctor.id rescue nil %>
+    <% doc_id = current_doctor.fake? ? nil : current_doctor.id %>
     <%= f.collection_select(:doc_id,
                             get_active_doctors,
                             :id,
