add cash service to past visits; Change default date for new visits

--- a/app/views/billings/_visit.html.erb
+++ b/app/views/billings/_visit.html.erb
@@ -15,9 +15,9 @@
         </td>
 
 	<% if date.present? %>
-            <td><%= link_to visit.entry_ts.strftime("%H:%M"), edit_patient_visit_path(patient,visit) %></td>
+            <td><%= link_to visit.entry_ts.strftime("%H:%M"), patient_visit_path(patient,visit) %></td>
          <% else %>
-            <td><%= link_to visit.entry_ts, edit_patient_visit_path(patient,visit) %></td>
+            <td><%= link_to visit.entry_ts, patient_visit_path(patient,visit) %></td>
          <%end %>
 	<td><%= doctor.lname %> </td>
 	<td><%= link_to patient.full_name, patient %> </td>
