--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -3,8 +3,7 @@ provide(:title, 'New Invoice')
 provide(:button_text, 'Create Invoice')
 %>
 
-<h2>New Invoice for patient <%= @patient.full_name %> </h2>
-
-<div class="col-md-8 col-sm-10 col-md-offset-2 col-sm-offset-1">
-<%= render 'form' %>
+<div class="col-sm-6 col-sm-offset-3">
+   <h3 class='display-1'>Patient <%= @patient.full_name %> : New Invoice </h3>
+   <%= render 'form' %>
 </div>
