--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -43,11 +43,15 @@
 <div class="row">
   <% remote = device_is_desktop? %>
 
-   <% unless @patient.pat_type == DECEASED_PATIENT %>
+<% unless @patient.pat_type == DECEASED_PATIENT %>
   <div id="new_visit" class="col-sm-3">
-    <%= button_to "New Visit", new_patient_visit_path(@patient), class:"btn btn-primary", method: 'get' %>
-  </div>
+  <% if remote %>
+     <%= button_to 'New Visit', new_patient_visit_path(@patient), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window',class:"btn btn-primary", method: 'get'  %> </td>
+  <% else %>
+     <%= button_to 'New Visit', new_patient_visit_path(@patient), class:"btn btn-primary", method: 'get' %>
   <% end %>
+  </div>
+<% end %>
 
   <div id="edit_pat" class="col-sm-3">
     <%= button_to "Edit Patient", edit_patient_path(@patient), remote: remote, 'data-toggle': "modal", 'data-target': '#modal-window', class:"btn btn-primary", method: 'get' %>
