--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -30,9 +30,9 @@
   <!-- Row 0 if new visit or admin --> 
 
      <div class="row">
-     <% if action_name == 'edit' && @visit.entry_ts.to_date == Date.today %>
+     <% if action_name == 'new' %>
 	<div class="col-sm-5">
-	   <%= f.input :entry_ts, as: :datetime,  datetime_separator: ' at ', label: 'Visit Date/time', html5: true %>
+		<%= f.input :entry_ts, as: :datetime,  datetime_separator: ' at ', label: 'Visit Date/time', html5: true %>
   	</div>
      <% end %>
      <% if current_user.admin? && action_name == 'edit' %>
