--- a/app/views/visits/_new.html.erb
+++ b/app/views/visits/_new.html.erb
@@ -1,11 +1,13 @@
+
 <%
-   provide(:title, 'Edit Invoice')
+   provide(:title, 'New Visit')
    provide(:button_text, 'Save changes')
+   @patient = Patient.find(@visit.patient_id)
 %>
  
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal">&times;</button>
-	<b class="modal-title" id="myModalLabel">Patient <%= @invoice.patient.lname %> Invoice To: <%= @invoice.provider.name %></b>
+	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %>(<%= @patient.pat_type %>) : New Visit</b>
 </div>
 <div class="modal-body">
        <%= render 'form' %>
@@ -13,4 +15,5 @@
 
 <div class="modal-footer">
 </div>
+
 
