--- a/app/views/procedures/edit.html.erb
+++ b/app/views/procedures/edit.html.erb
@@ -2,7 +2,7 @@
 <% provide(:button_text, 'Save changes') %>
 
 <div class="col-sm-8 col-sm-offset-2">
-   <h3 class='display-1'>Edit Procedure</h3>
+    <h3 class='display-1'><%= @procedure.code %> - Edit Procedure</h3>
     <%= render 'form' %>
 </div>
 
