--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -5,6 +5,13 @@
 
 	<div class="panel panel-default">
 		<div class="panel-body news-panel-body">
+			<li>You can now change status of visits with errors (there’s one in day sheet) to Ready to Bill once error is fixed.
+				Error code in shown on visit page. Description available on mouse over</li>
+
+			<li>Visit form now pops up when new visit is created to allow date/time entry if necessary. Please use with caution</li>
+			<li>Billed and paid for visits now can be added to. Theres new button on visit form for such visits called “Add Cash Service”</li>
+
+
 			<li> End of day reports can only be generated when billing is done </li> 
 			<li> Doctor selection drop-down moved to the header. Sticky until changed </li>
 			<li> No new visits for Deceased patients </li>
