--- a/app/views/forms/edit.html.erb
+++ b/app/views/forms/edit.html.erb
@@ -2,6 +2,6 @@
 <% provide(:button_text, 'Save changes') %>
 
 <div class="col-md-7 col-sm-12 col-md-offset-3 col-sm-offset-3">
-  <h3 class='display-1'>Edit Form</h3>
+	<h3 class='display-1'><%= @form.name %> - Edit Form</h3>
   <%= render 'myform' %>
 </div>
