--- a/app/views/forms/new.html.erb
+++ b/app/views/forms/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'New form') %>
 <% provide(:button_text, 'Save changes') %>
-<h1>New Form</h1>
 
-<div class="col-md-8 col-sm-12 col-md-offset-3 col-sm-offset-3">
+<div class="col-md-7 col-sm-12 col-md-offset-3 col-sm-offset-3">
+<h3 class='display-1'>Add Form</h3>
 <%= render 'myform' %>
 </div>
