--- a/app/views/layouts/_forms.html.erb
+++ b/app/views/layouts/_forms.html.erb
@@ -7,5 +7,6 @@
       <li> <%= link_to "All Forms", forms_path, method: :get %> </li>
       <li> <%= link_to "WCB Forms", forms_path(ftype: WCB_FORM), method: :get %> </li>
       <li> <%= link_to "Lab Forms", forms_path(ftype: LAB_FORM), method: :get %> </li>
+      <li> <%= link_to "MTO Forms", forms_path(ftype: MTO_FORM), method: :get %> </li>
     </ul>
 </li>
