--- a/app/views/procedures/edit.html.erb
+++ b/app/views/procedures/edit.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'Edit procedure') %>
 <% provide(:button_text, 'Save changes') %>
+<%= render "shared/modal", size: 'lg' %>
 
 <div class="col-sm-8 col-sm-offset-2">
     <h3 class='display-1'><%= @procedure.code %> - Edit Procedure</h3>
