--- a/app/views/providers/new.html.erb
+++ b/app/views/providers/new.html.erb
@@ -1,11 +1,7 @@
 <% provide(:title, 'New Insurance Provider') %>
 <% provide(:button_text, 'Save') %>
-<h1>New Insurance Provider </h1>
 
-<div class="row justify-content-md-center">
-	<div class="col-md-10 col-md-offset-3">
-
+<div class="col-sm-8 col-sm-offset-2">
+<h3 class='diplay-1'>New Insurance Provider </h3>
 	<%= render 'form' %>
-
-	</div>
 </div>
