--- a/app/views/vaccines/_form.html.erb
+++ b/app/views/vaccines/_form.html.erb
@@ -1,3 +1,4 @@
+<% noedit ||= false %>
 <div class='well'>
 <%= simple_form_for @vaccine do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
@@ -8,7 +9,9 @@
   <%= f.input :dose %>
   <%= f.input :din %>
   <%= f.input :notes, placeholder: 'Notes', label: false %>
+  <% unless noedit %>
   <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+  <% end %>
 
 <% end %>
 </div>
