--- a/app/views/vaccines/_vaccine.html.erb
+++ b/app/views/vaccines/_vaccine.html.erb
@@ -1,17 +1,29 @@
      <tr>
-	<% if current_user.doctor? %>
+	<% if remote %>
+          <td><%= link_to "#{vaccine.name}", vaccine, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %> </td>
+        <% else %>
 	  <td><%= link_to vaccine.name, vaccine %> </td>
-	<% else %>
-	  <td><%= link_to vaccine.name, edit_vaccine_path(vaccine) %> </td>
-	<% end %>
+  	<% end %>
+
 	<td><%= vaccine.target %> </td> 
 	<td><%= vaccine.route %></td> 
 	<td><%= vaccine.dose %></td> 
 	<td><%= vaccine.din %></td> 
 	<td><%= vaccine.notes %></td> 
-  	<% if current_user.admin?  %>
-		<td> <%= link_to "delete", vaccine, method: :delete, data: { confirm: "Are you sure you want to delete #{vaccine.name}?" } %> </td>
-	<% end %>
+ 	<% unless current_user.doctor? %>
+        <td>
+        <% if remote %>
+          <%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_vaccine_path(vaccine), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %>
+        <% else %>
+          <%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_vaccine_path(vaccine) %>
+        <% end %>
+        </td>
+        <% end %>
+
+        <% if current_user.admin?  %>
+        <td> <%= link_to '<i class="glyphicon glyphicon-trash"></i>'.html_safe, vaccine, method: :delete, data: { confirm: "Are you sure you want to delete #{vaccine.name}?" } %> </td>
+        <% end %>
+
      </tr>
 
 
