--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -1,9 +1,7 @@
 <% provide(:title, @provider.name) %>
 
-	<h1>Provider:  <%= @provider.name %> - details  </h1>
-
-<div class="row justify-content-md-center">
-  <div class="col-md-6 col-md-offset-3">
+<div class="col-md-6 col-md-offset-3">
+	<h3 class='display-1'>Provider:  <%= @provider.name %> - details  </h3>
 	   <pre>
 
 	      Address:  <%= @provider.addr1 %>
@@ -24,7 +22,6 @@
     <% end %>
     <p>
     <%= button_to "Back", providers_path, class: "btn btn-primary", :method => "get" %>
-  </div>
 </div>
 
 
